discussion/kv_engine/168587/168587_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including probabilistic_counter.h

probabilistic_counter.h is included by hash_table.h (as HashTable
includes a ProbabilisticCounter member), and hash_table.h is itself
included by many other files.

probabilistic_counter.h is relatively expensive to include, as while
it is very small it includes <random> which costs ~135ms.

Move the function which actually requires <random> into it's own .cc
file. This reduces the cost of including probabilistic_counter.h - so
much so that probabilistic_counter.h is no longer listed in the top
headers, so using a header which includes it as proxy to measure the
improvement.

before:

    19130 ms: kv_engine/engines/ep/src/hash_table.h (included 77 times, avg 248 ms)

after:

    7755 ms: kv_engine/engines/ep/src/hash_table.h (included 77 times, avg 100 ms)

Change-Id: Ic6098e90ed1ee2e86cda4310754b14cf8c87de0a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 09:34:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 10:38:11.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14754/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:95:22: error: unknown type name "uint16_t" [clang-diagnostic-error]
    bool isSaturated(uint16_t counter) const {
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:96:28: error: use of undeclared identifier "std" [clang-diagnostic-error]
        return (counter == std::numeric_limits<T>::max());
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14754/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/probabilistic_counter.h:95:22:
error: unknown type name "uint16_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14754/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42732/ : FAILURE

Timeout of a CTest test 420/420 Test  #59: ep-engine_ep_unit_tests.NotifyTest ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42732/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36210/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/probabilistic_counter.h:96:33:
error: no member named "numeric_limits" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24831/ : FAILURE

Timeout of a CTest test [2022-01-12T10:35:14.682Z] 296/422 Test  #63: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24831/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16709/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16709/ )

Timeout of a CTest test [2022-01-12T10:10:18.629Z] 309/440 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16709/ )

Test exceeded the timeout:
[2022-01-12T10:14:36.665Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16709/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17502/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4399/ : FAILURE

Compile error at [2022-01-12T09:52:52.847Z] ../kv_engine/engines/ep/src/probabilistic_counter.h:96:33:
error: no member named "numeric_limits" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16418/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16418/ )

Timeout of a CTest test [2022-01-12T10:15:16.977Z] 422/422 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16418/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4457/ : FAILURE

Timeout of a CTest test [2022-01-12T10:02:04.974Z] 299/441 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4457/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15560/ : FAILURE

Timeout of a CTest test [2022-01-12T09:49:51.410Z] 292/440 Test  #64: ep-engine_ep_unit_tests.NotifyTest ..........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15560/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13596/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
